--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -53,7 +53,7 @@ jobs:
 
   vps_sync:
     runs-on: ubuntu-latest
-    # needs: test-laravel # Deploy only if Laravel tests pass
+    needs: test-build # Deploy only if Laravel tests pass
 
     steps:
       - name: Checkout Repository
