--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -26,34 +26,34 @@ jobs:
       - name: 🏗 Build Frontend (Vite)
         run: npm run build
 
-  # test-laravel:
-  #   runs-on: ubuntu-latest
-  #   needs: test-build # Run Laravel tests after Vite build
-  #   steps:
-  #     - name: 🛠 Checkout Repository
-  #       uses: actions/checkout@v4
+  test-laravel:
+    runs-on: ubuntu-latest
+    needs: test-build # Run Laravel tests after Vite build
+    steps:
+      - name: 🛠 Checkout Repository
+        uses: actions/checkout@v4
 
-  #     - name: 🔧 Setup PHP
-  #       uses: shivammathur/setup-php@v2
-  #       with:
-  #         php-version: 8.2
-  #         extensions: mbstring, bcmath, xml, pdo_mysql
-  #         tools: composer, phpunit
+      - name: 🔧 Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.2
+          extensions: mbstring, bcmath, xml, pdo_mysql
+          tools: composer, phpunit
 
-  #     - name: 📦 Install Backend Dependencies
-  #       run: composer install --no-dev --optimize-autoloader
+      - name: 📦 Install Backend Dependencies
+        run: composer install --no-dev --optimize-autoloader
 
-  #     - name: 🛠 Set Up Laravel Environment
-  #       run: |
-  #         cp .env.example .env
-  #         php artisan key:generate
+      - name: 🛠 Set Up Laravel Environment
+        run: |
+          cp .env.example .env
+          php artisan key:generate
 
-  #     - name: 🛠 Run Laravel Tests
-  #       run: php artisan test
+      - name: 🛠 Run Laravel Tests
+        run: php artisan test
 
   vps_sync:
     runs-on: ubuntu-latest
-    needs: test-build # Deploy only if Laravel tests pass
+    needs: test-laravel # Deploy only if Laravel tests pass
 
     steps:
       - name: Checkout Repository
