--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "esbuild": "^0.25.0",
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
@@ -34,7 +35,7 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.0.2",
+        "typescript": "^5.7.3",
         "vite": "^6.0"
     },
     "dependencies": {
