--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -153,7 +153,7 @@ jobs:
           APP_KEY=${{ secrets.APP_KEY }}
           APP_DEBUG=${{ vars.APP_DEBUG }}
           APP_TIMEZONE=${{ vars.APP_TIMEZONE }}
-          APP_URL=${{ secrets.APP_URL }}
+          APP_URL=${{ secrets.APP_URL_DEV }}
 
           APP_LOCALE=${{ vars.APP_LOCALE }}
           APP_FALLBACK_LOCALE=${{ vars.APP_FALLBACK_LOCALE }}
