--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -124,7 +124,10 @@ jobs:
           sudo apt install software-properties-common -y
           sudo add-apt-repository ppa:ondrej/php -y
           sudo apt update
+
+          echo "Installing required PHP extensions..."
           sudo apt install php8.3 php8.3-cli php8.3-fpm php8.3-sqlite3 unzip curl git -y
+          sudo apt install -y php8.3-dom php8.3-xml
 
           echo "Installing Composer..."
           php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
