--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
-# Staging Real Dom staging-novatix.xyz
+# Staging Real Dom staging-roetix.xyz
 server {
     listen 80;
-    server_name staging-novatix.xyz *.staging-novatix.xyz;
+    server_name staging-roetix.xyz *.staging-roetix.xyz;
 
     # Redirect all HTTP traffic to HTTPS
     return 301 https://$host$request_uri;
@@ -9,13 +9,13 @@ server {
 
 server {
     listen 443 ssl;
-    server_name staging-novatix.xyz *.staging-novatix.xyz;
+    server_name staging-roetix.xyz *.staging-roetix.xyz;
 
-    root /var/www/novatix_staging/public;
+    root /var/www/roetix_staging/public;
     index index.php index.html index.htm;
 
-    ssl_certificate /etc/letsencrypt/live/staging-novatix.xyz/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/staging-novatix.xyz/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/staging-roetix.xyz/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/staging-roetix.xyz/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers on;
@@ -31,14 +31,14 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    error_log /var/log/nginx/novatix_staging_error.log;
-    access_log /var/log/nginx/novatix_staging_access.log;
+    error_log /var/log/nginx/roetix_staging_error.log;
+    access_log /var/log/nginx/roetix_staging_access.log;
 }
 
-# Production Real Dom novatix.id
+# Production Real Dom roetix.id
 server {
     listen 80;
-    server_name novatix.id *.novatix.id;
+    server_name roetix.id *.roetix.id;
 
     # Redirect all HTTP traffic to HTTPS
     return 301 https://$host$request_uri;
@@ -46,13 +46,13 @@ server {
 
 server {
     listen 443 ssl;
-    server_name novatix.id *.novatix.id;
+    server_name roetix.id *.roetix.id;
 
-    root /var/www/novatix/public;
+    root /var/www/roetix/public;
     index index.php index.html index.htm;
 
-    ssl_certificate /etc/letsencrypt/live/novatix.id/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/novatix.id/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/roetix.id/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/roetix.id/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
     ssl_prefer_server_ciphers on;
@@ -68,6 +68,6 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
-    error_log /var/log/nginx/novatix_error.log;
-    access_log /var/log/nginx/novatix_access.log;
+    error_log /var/log/nginx/roetix_error.log;
+    access_log /var/log/nginx/roetix_access.log;
 }
