--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -136,8 +136,12 @@ jobs:
 
           composer install --no-interaction --prefer-dist --optimize-autoloader
           # Laravel setup
-          cp .env.example .env
-          php artisan key:generate
+          # If env not exist
+          if [ ! -f .env ]; then
+              echo "Creating .env file..."
+              cp .env.example .env
+              php artisan key:generate
+          fi
 
           echo "Installing Node.js and npm..."
           curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
