--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "@radix-ui/react-tooltip": "^1.1.7",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "embla-carousel-react": "^8.6.0",
         "flowbite": "^2.5.2",
         "flowbite-react": "^0.10.2",
         "laravel-echo": "^2.0.2",
