--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@radix-ui/react-separator": "^1.1.1",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.7",
+        "@yudiel/react-qr-scanner": "^2.3.1",
         "@zxing/library": "^0.21.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
@@ -67,6 +68,7 @@
         "flowbite": "^2.5.2",
         "flowbite-react": "^0.10.2",
         "framer-motion": "^12.12.1",
+        "jsqr": "^1.4.0",
         "laravel-echo": "^2.0.2",
         "lucide-react": "^0.475.0",
         "mqtt": "^5.12.0",
@@ -74,6 +76,7 @@
         "socket.io-client": "^4.8.1",
         "styled-components": "^6.1.15",
         "tailwind-merge": "^3.0.1",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "ziggy-js": "^2.5.3"
     }
 }
