--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,13 @@
         "blade-ui-kit/blade-icons": "^1.8",
         "filament/filament": "^3.2",
         "filament/infolists": "^3.2",
+        "guzzlehttp/guzzle": "^7.9",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/socialite": "^5.18",
         "laravel/tinker": "^2.9",
         "maatwebsite/excel": "^3.1",
-        "mailersend/laravel-driver": "^2.11",
         "mews/purifier": "^3.4",
         "midtrans/midtrans-php": "^2.6",
         "njxqlus/filament-relation-manager-component": "*",
